--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,103 @@
-/target/
-!.mvn/wrapper/maven-wrapper.jar
+# Gradle
+build
+.gradle
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
+testdata/
+# Java gitignore #
+.class
+.log
+
+# Package Files #
+
+*.war
+*.ear
+*.gradle
+
+#hsf files
+configuration
+
+# maven gitignore#
+target/**
+.mvn/
+mvnw
+mvnw.cmd
+
+# spring files
 .springBeans
-.sts4-cache
 
-### IntelliJ IDEA ###
+# svn files
+.svn/
+
+# intelliJ.gitignore #
 .idea
-*.iws
 *.iml
 *.ipr
+*.iws
+*.bat
 
-### NetBeans ###
-/nbproject/private/
-/build/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Eclipse git ignore#
+*.pydevproject
+.project
+.metadata
+bin/**
+*/bin/**
+tmp/**
+tmp/**/*
+configuration/**
+*.tmp
+*.bak
+*.orig
+*.swp
+*~.nib
+.classpath
+.settings/
+.loadpath
+.fileTable*
+.cache
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+#log
+*.log
+*.log.*
+
+# Windows Thumbs.db
+*.db
+
+# OSX
+.DS_Store
+
+# sass gitignore#
+.sass-cache
+.idea
+
+# tcc_coverage
+coverage.ec
+
+
+config.client.*
+
+temp/
+*.pid
+*.orig
+
+hsf.configuration/
+
+# code coverage report
+*.ec
+
+#hsf test
+*.instance
+**/target
+.pmd
+**/.pmd
